--- a/.github/workflows/build-mingw64.yml
+++ b/.github/workflows/build-mingw64.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Build
         run: |
           opam exec -- dune subst
-          opam exec -- dune build -p ocamlformat-lib-dev,ocamlformat-dev,ocamlformat-lib,ocamlformat @install
+          opam exec -- dune build -p ocamlformat-lib-devversion,ocamlformat-devversion,ocamlformat-lib,ocamlformat @install
           opam exec -- dune install --prefix=install ocamlformat
           Copy-Item ${{ github.workspace }}\\install\\bin\\ocamlformat.exe -Destination .\${{ env.artifact_name }}
 
