--- a/lib-rpc-server/dune
+++ b/lib-rpc-server/dune
@@ -1,6 +1,13 @@
 (library
  (name ocamlformat_rpc)
  (public_name ocamlformat.rpc)
+  (flags
+  (:standard
+   ; enable release renaming
+   -open
+   Ocamlformat_stdlib_devversion
+   ; disable release renaming
+   ))
  (libraries
   ocamlformat-lib
   ocamlformat.bin_conf
