--- a/ocamlformat-devversion.opam
+++ b/ocamlformat-devversion.opam
@@ -26,8 +26,8 @@ depends: [
   "ocaml" {>= "4.08"}
   "cmdliner" {with-test = "false" & >= "1.1.0" | with-test & >= "1.2.0"}
   "csexp" {>= "1.4.0"}
-  "dune" {>= "2.8"}
-  "ocamlformat-lib-dev" {= version}
+  "dune" {>= "3.14"}
+  "ocamlformat-lib-devversion" {= version}
   "ocamlformat-rpc-lib" {with-test & = version}
   "re" {>= "1.10.3"}
   "odoc" {with-doc}
