--- a/ocamlformat-lib.opam
+++ b/ocamlformat-lib.opam
@@ -15,8 +15,8 @@ authors: [
 homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
-  "dune" {>= "2.8"}
-  "ocamlformat-lib-dev"
+  "dune" {>= "3.14"}
+  "ocamlformat-lib-devversion"
   "odoc" {with-doc}
 ]
 build: [
