--- a/bin/ocamlformat/dune
+++ b/bin/ocamlformat/dune
@@ -14,7 +14,7 @@
   (write-file
    ocamlformat_format.ml
    ; enable release renaming
-   "include Ocamlformat_format_devversion"
+   "include Ocamlformat_format_dev"
    ; disable release renaming
    )))
 
@@ -23,7 +23,7 @@
   (write-file
    ocamlformat_lib.ml
    ; enable release renaming
-   "include Ocamlformat_lib_devversion"
+   "include Ocamlformat_lib_dev"
    ; disable release renaming
    )))
 
@@ -32,7 +32,7 @@
   (write-file
    bin_conf.ml
    ; enable release renaming
-   "include Bin_conf_devversion"
+   "include Bin_conf_dev"
    ; disable release renaming
    )))
 
@@ -40,27 +40,27 @@
  (name main)
  (public_name
   ; enable release renaming
-  ocamlformat-devversion
+  ocamlformat-dev
   ; disable release renaming
   )
  (package
   ; enable release renaming
-  ocamlformat-devversion
+  ocamlformat-dev
   ; disable release renaming
   )
  (flags
   (:standard
    ; enable release renaming
    -open
-   Ocamlformat_stdlib_devversion
+   Ocamlformat_stdlib_dev
    ; disable release renaming
    ))
  (instrumentation
   (backend bisect_ppx))
  (libraries
   ; enable release renaming
-  ocamlformat-lib-devversion
-  bin_conf_devversion
+  ocamlformat-lib-dev
+  bin_conf_dev
   ; disable release renaming
   ))
 
