--- a/ocamlformat-dev.opam
+++ b/ocamlformat-dev.opam
@@ -27,7 +27,7 @@ depends: [
   "cmdliner" {with-test = "false" & >= "1.1.0" | with-test & >= "1.2.0"}
   "csexp" {>= "1.4.0"}
   "dune" {>= "3.14"}
-  "ocamlformat-lib-devversion" {= version}
+  "ocamlformat-lib-dev" {= version}
   "ocamlformat-rpc-lib" {with-test & = version}
   "re" {>= "1.10.3"}
   "odoc" {with-doc}
