--- a/ocamlformat-lib.opam
+++ b/ocamlformat-lib.opam
@@ -16,7 +16,7 @@ homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "dune" {>= "3.14"}
-  "ocamlformat-lib-devversion"
+  "ocamlformat-lib-dev"
   "odoc" {with-doc}
 ]
 build: [
