--- a/lib-rpc-server/dune
+++ b/lib-rpc-server/dune
@@ -5,7 +5,7 @@
   (:standard
    ; enable release renaming
    -open
-   Ocamlformat_stdlib_dev
+   Ocamlformat_stdlib_multi_version_alpha1
    ; disable release renaming
    ))
  (libraries
