--- a/lib/latest/dune
+++ b/lib/latest/dune
@@ -3,7 +3,7 @@
   (write-file
    ocamlformat_lib.ml
    ; enable release renaming
-   "include Ocamlformat_lib_dev"
+   "include Ocamlformat_lib_multi_version_alpha1"
    ; disable release renaming
    )))
 
@@ -12,6 +12,6 @@
  (public_name ocamlformat-lib)
  (libraries
   ; enable release renaming
-  ocamlformat-lib-dev
+  ocamlformat-lib-multi_version_alpha1
   ; disable release renaming
   ))
