--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -17,7 +17,7 @@ bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "dune" {>= "3.14"}
   "bos"
-  "ocamlformat-dev"
+  "ocamlformat-multi_version_alpha1"
   "ocamlformat-lib" {= version}
   "odoc" {with-doc}
 ]
