--- a/test/unit/dune
+++ b/test/unit/dune
@@ -5,7 +5,7 @@
   (:standard
    ; enable release renaming
    -open
-   Ocamlformat_format_dev
+   Ocamlformat_format_multi_version_alpha1
    ; disable release renaming
    ))
  (libraries alcotest base ocamlformat-lib))
