--- a/lib/dune
+++ b/lib/dune
@@ -57,7 +57,7 @@
   )
  (public_name
   ; enable release renaming
-  ocamlformat-lib-dev
+  ocamlformat-dev.ocamlformat-lib
   ; disable release renaming
   )
  (flags
