--- a/ocamlformat-dev.opam
+++ b/ocamlformat-dev.opam
@@ -42,6 +42,7 @@ depends: [
   "astring"
   "camlp-streams"
   "re" {>= "1.10.3"}
+  "ocamlformat-lib" {= version}
   "odoc" {with-doc}
 ]
 build: [
