--- a/lib/dune
+++ b/lib/dune
@@ -22,69 +22,29 @@
    ; disable release renaming
    )))
 
-(rule
- (action
-  (write-file
-   ocamlformat_parser_extended.ml
-   ; enable release renaming
-   "include Ocamlformat_parser_extended_dev"
-   ; disable release renaming
-   )))
-
-(rule
- (action
-  (write-file
-   ocamlformat_odoc_parser.ml
-   ; enable release renaming
-   "include Ocamlformat_odoc_parser_dev"
-   ; disable release renaming
-   )))
-
-(rule
- (action
-  (write-file
-   ocamlformat_parser_standard.ml
-   ; enable release renaming
-   "include Ocamlformat_parser_standard_dev"
-   ; disable release renaming
-   )))
-
 (library
- (name
-  ; enable release renaming
-  ocamlformat_lib_dev
-  ; disable release renaming
-  )
- (public_name
-  ; enable release renaming
-  ocamlformat-dev.ocamlformat-lib
-  ; disable release renaming
-  )
+ (name ocamlformat_lib)
+ (public_name ocamlformat-lib)
  (flags
   (:standard
-   ; enable release renaming
    -open
-   Ocamlformat_ocaml_common_dev
+   Ocamlformat_ocaml_common
    -open
-   Ocamlformat_parser_extended_dev
+   Ocamlformat_parser_extended
    -open
-   Ocamlformat_stdlib_dev
+   Ocamlformat_stdlib
    -open
-   Ocamlformat_format_dev
-   ; disable release renaming
-   ))
+   Ocamlformat_format))
  (instrumentation
   (backend bisect_ppx))
  (libraries
   dune-build-info
   ocaml-version
-  ; enable release renaming
-  ocamlformat_format_dev
-  ocamlformat_ocaml_common_dev
-  ocamlformat_odoc_parser_dev
-  ocamlformat_parser_extended_dev
-  ocamlformat_parser_standard_dev
-  ocamlformat_stdlib_dev
-  ; disable release renaming
+  ocamlformat_format
+  ocamlformat_ocaml_common
+  ocamlformat_odoc_parser
+  ocamlformat_parser_extended
+  ocamlformat_parser_standard
+  ocamlformat_stdlib
   ocp-indent.lib
   uuseg.string))
