Fix bug with formatting layout annotations (#68)
* Fixed bug, changed a test to test it, re-enabled windows build

Signed-off-by: Charlie Gunn <cgunn@janestreet.com>

* Simplify match statement

Co-authored-by: Richard Eisenberg <rae@richarde.dev>
Signed-off-by: Charlie Gunn <cgunn@janestreet.com>

---------

Signed-off-by: Charlie Gunn <cgunn@janestreet.com>
Co-authored-by: Charlie Gunn <cgunn@janestreet.com>
Co-authored-by: Richard Eisenberg <rae@richarde.dev>

--- a/.github/workflows/build-others.yml
+++ b/.github/workflows/build-others.yml
@@ -18,9 +18,7 @@ jobs:
       matrix:
         os:
           - macos-latest
-          # PR 65 broke windows support. Getting this back isn't high priority,
-          # but it would be nice.
-          # - windows-latest
+          - windows-latest
         ocaml-compiler:
           # Don't include every versions. OCaml-CI already covers that
           - 4.14.x
