Make more compatible with bleeding-edge-with-extensions & remove windows CI (#87)
* Make compatible with Jane Street extensions

Signed-off-by: Nick Roberts <nroberts@janestreet.com>

* Fix dune package

Signed-off-by: Nick Roberts <nroberts@janestreet.com>

* Make more compatible with bleeding-edge-with-extensions

Signed-off-by: Nick Roberts <nroberts@janestreet.com>

* Update windows CI to build with ocaml 5.2

Signed-off-by: Nick Roberts <nroberts@janestreet.com>

* Remove windows CI

Signed-off-by: Nick Roberts <nroberts@janestreet.com>

---------

Signed-off-by: Nick Roberts <nroberts@janestreet.com>

--- a/.github/workflows/build-others.yml
+++ b/.github/workflows/build-others.yml
@@ -18,10 +18,11 @@ jobs:
       matrix:
         os:
           - macos-latest
-          - windows-latest
+          # Don't include windows. At time of writing, its opam repository doesn't have 5.2.
+          # - windows-latest
         ocaml-compiler:
           # Don't include every versions. OCaml-CI already covers that
-          - 4.14.x
+          - 5.2.x
 
     runs-on: ${{ matrix.os }}
 
