--- a/lib/erase_jane_syntax/dune
+++ b/lib/erase_jane_syntax/dune
@@ -1,3 +1,3 @@
 (library
- (public_name ocamlformat.erase_jane_syntax)
+ (public_name ocamlformat-lib.erase_jane_syntax)
  (name erase_jane_syntax))
